
--------------------------- To-do -----------------------------
Bugs
- Transpoofer should reset faction to base on docking so it doesn't pull your own fleet into station battles
- add in support for "indevo_compat" tag on orbital station industries to work with artillery stations
- add in support for starFed station
- Detachment crash: https://discord.com/channels/187635036525166592/619635013201428481/1043634065917608088
- blacklist planets with artillery for quests
- stop artillery from spawning on planets that are quest targets, and from spawning in systems cut off from hyper
- patrols can capture watchtowers, player can't, fix it so patrols can't if it's locked, either.
- Seems like watchtowers are perma-locked due to nex interaction? Check that out
- Artillery stations are stuck in perma-repair on game start and never repair themselves
- reduce artillery station spawn rate
- force presence in systems with nexus
- move watchtower placement into the condition
- artillery station interaction is broken
- add a watchtower terrain that tells you if you are in wt range

Requests
- Add keyboard shortcuts to all indEvo industry menu points
- Make it so if we kill the artillery station we can convert its husk into a outpost without having to colonize the planet
- Minefield and artillery as planet conditions so it shows up in search
- Watchtowers buildable in stable loc

Upcoming
- Add a secondary way to access colony options
- consumable item that makes your fleet look bigger than is is to NPCs
    - maybe add a boat with like 200 dp to the fleet and remove it when ui window is opened so other fleets run from you
- Add something that lets you remove S-Mods
- Change derelict industries to superstructures
- Artillery industry images
- add roaming derelict fleets to uninhabited arty systems
- Casino
    - Blackjack
    - Roulette
    - Slot machines
    - add "spacer captain in debt" bar event: sells his last ship for half off to pay his debt